datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id        String   @id @default(cuid())
  chatId    String   @unique
  firstname String?
  username  String?
  works     Works[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([chatId])
}

model Works {
  id                     String     @id @default(cuid())
  name                   String?
  chatId                 String
  selectedChatsId        Int?
  listenChannelUsernames String[]
  listenWords            String[]
  muteChannelUsernames   Json[]     @db.Json
  muteUsernames          Json[]     @db.Json
  muteWords              String[]
  user                   User       @relation(fields: [userId], references: [id])
  userId                 String
  updatedAt              DateTime   @default(now())
  createdAt              DateTime   @default(now())
  Messages               Messages[]

  @@index([chatId])
  @@index([userId])
  @@index([listenChannelUsernames])
  @@index([listenWords])
}

model Messages {
  id              String   @id @default(cuid())
  work            Works    @relation(fields: [workId], references: [id])
  messageId       String
  workId          String
  channelName     String   @default("")
  channelUsername String
  username        String
  createdAt       DateTime @default(now())

  @@index([workId])
}

enum SettingKey {
  MAIN
  DEVELOPMENT
}

model Setting {
  id           SettingKey @id
  TEXTS        Json
  MENU_BUTTONS Json?
  VALUE        Json[]
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
}

model Presets {
  id          Int    @id @default(autoincrement())
  priority    Int?   @default(0)
  alias       String @unique
  name        String
  words       Json[]
  minus_words Json[]
}

model Areas {
  id        Int     @id @default(autoincrement())
  priority  Int?    @default(0)
  alias     String? @unique
  name      String?
  usernames Json[]
}
