//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  chatId String [unique, not null]
  firstname String
  username String
  works Works [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Works {
  id String [pk]
  name String
  chatId String [not null]
  selectedChatsId Int
  listenChannelUsernames String[] [not null]
  listenWords String[] [not null]
  muteChannelUsernames Json[] [not null]
  muteUsernames Json[] [not null]
  muteWords String[] [not null]
  user User [not null]
  userId String [not null]
  updatedAt DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  Messages Messages [not null]
}

Table Messages {
  id String [pk]
  work Works [not null]
  messageId String [not null]
  workId String [not null]
  channelName String [not null, default: '']
  channelUsername String [not null]
  username String [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table Setting {
  id SettingKey [pk]
  TEXTS Json [not null]
  MENU_BUTTONS Json
  VALUE Json[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Presets {
  id Int [pk, increment]
  priority Int [default: 0]
  alias String [unique, not null]
  name String [not null]
  words Json[] [not null]
  minus_words Json[] [not null]
}

Table Areas {
  id Int [pk, increment]
  priority Int [default: 0]
  alias String [unique]
  name String
  usernames Json[] [not null]
}

Enum SettingKey {
  MAIN
  DEVELOPMENT
}

Ref: Works.userId > User.id

Ref: Messages.workId > Works.id